# tl-fractal

./: .gitignore  README.md  check_data_svg.py  fetch_data.py  filter_fractals.py  identify_fractals.py  kline_logic.py  kline_merging.py  process_tl_cfe.py  pyproject.toml  run_pipeline.py  trial.py  verify_merging.py  visualize_kline.py
data/: security_names.json
data/raw/: 000510_SH.xlsx  600415_SH.xlsx  600519_SH.xlsx  881001_WI.xlsx  NDX_GI.xlsx  TB10Y.WI.xlsx  TB10Y_WI.xlsx  TL.CFE.xlsx  TL_CFE.xlsx  security_names.json
docs/: api-faq.md  client-api-man.md  generate_workflow.py  wind-python-api-manual.md  workflow.md
output/000510_sh/: 000510_SH_interactive.html
output/000510_sh_中证a500/: 000510_SH_interactive.html
output/600415_sh/: 600415_SH_interactive.html
output/600415_sh_小商品城/: 600415_SH_interactive.html
output/600519_sh_贵州茅台/: 600519_SH_interactive.html
output/881001_wi/: 881001_WI_interactive.html
output/881001_wi_万得全a/: 881001_WI_interactive.html
output/ndx_gi/: NDX_GI_interactive.html
output/ndx_gi_纳斯达克100/: NDX_GI_interactive.html
output/tb10y_wi/: TB10Y_WI_interactive.html
output/tb10y_wi_10y国债活跃/: TB10Y.WI_interactive.html  TB10Y_WI_interactive.html
output/tb10y_wi_10年期国债收益率/: TB10Y_WI_interactive.html
output/tl_cfe/: TL_CFE_interactive.html
output/tl_cfe_30年期国债期货/: TL_CFE_interactive.html
output/tl_cfe_cffex30年期国债期货/: TL.CFE_interactive.html
src/: __init__.py
src/analysis/: __init__.py  fractals.py  indicators.py  interactive.py  merging.py  process_ohlc.py
src/io/: __init__.py  data_config.py  loader.py  schema.py
(+37 files in other folders)
